fix sizing issue on firefox
expanded #gameRow1 width by 20 to allow the text to fit all on 1 line

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     height: 50px;
-    width: 350px;
+    width: 370px;
     font-size: xx-large;
 }
 #gameRow2 {
